force-app/main/default/objects/Blocking_Unit_Information__c/Blocking_Unit_Information__c.object-meta.xml
<CustomObject>
    <label>Blocking Unit Information</label>
    <nameField>
        <displayFormat>BUI-{000000}</displayFormat>
        <label>Blocking Unit Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blocking Unit Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>