force-app/main/default/objects/Blocking_Unit_Information__c/fields/Agreed_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Agreement_Value__c</fullName>
    <label>Agreed Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>