force-app/main/default/objects/Blocking_Unit_Information__c/fields/Amount_5__c.field-meta.xml
<CustomField>
    <fullName>Amount_5__c</fullName>
    <label>Amount 5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>