force-app/main/default/objects/Blocking_Unit_Information__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Blocking_Unit_Information</relationshipName>
    <type>Lookup</type>
</CustomField>