force-app/main/default/objects/Blocking_Unit_Information__c/fields/Approx_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Approx_Agreement_Value__c</fullName>
    <label>Approx Agreement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>