force-app/main/default/objects/Blocking_Unit_Information__c/fields/Bank_Name_5__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_5__c</fullName>
    <label>Bank Name 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>