force-app/main/default/objects/Blocking_Unit_Information__c/fields/Blocked_Date__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Date__c</fullName>
    <formula>/*DATEVALUE( CreatedDate )*/
 Opportunity__r.Blocked_Date__c</formula>
    <label>Blocked Date</label>
    <type>Date</type>
</CustomField>