force-app/main/default/objects/Blocking_Unit_Information__c/fields/Book_Now_Pending_Ageing__c.field-meta.xml
<CustomField>
    <fullName>Book_Now_Pending_Ageing__c</fullName>
    <formula>IF(
  ISBLANK(Opportunity__r.Booking__r.Id),
  TODAY() - DATEVALUE(CreatedDate),
  DATEVALUE(Opportunity__r.Booking__r.CreatedDate) - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days passed between booking &amp; blocking</inlineHelpText>
    <label>Book Now Pending Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>