force-app/main/default/objects/Blocking_Unit_Information__c/fields/Book_Now_Status__c.field-meta.xml
<CustomField>
    <fullName>Book_Now_Status__c</fullName>
    <label>Book Now Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>