force-app/main/default/objects/Blocking_Unit_Information__c/fields/Mode_Of_Payment_2__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Payment_2__c</fullName>
    <label>Mode Of Payment 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>RTGS / NEFT / Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>