force-app/main/default/objects/Blocking_Unit_Information__c/fields/Paid_Date_4__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date_4__c</fullName>
    <label>Paid Date 4</label>
    <type>Date</type>
</CustomField>