force-app/main/default/objects/Blocking_Unit_Information__c/fields/Pan_Number__c.field-meta.xml
<CustomField>
    <fullName>Pan_Number__c</fullName>
    <label>Pan Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>