force-app/main/default/objects/Blocking_Unit_Information__c/fields/Pending_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pending_Reason__c</fullName>
    <label>Pending Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finalize applicant details</fullName>
            </value>
            <value>
                <fullName>Aadhar card copy</fullName>
            </value>
            <value>
                <fullName>PAN card copy</fullName>
            </value>
            <value>
                <fullName>Full booking amount</fullName>
            </value>
            <value>
                <fullName>Customer signature on booking form</fullName>
            </value>
            <value>
                <fullName>Pricing negotiations</fullName>
            </value>
            <value>
                <fullName>Unit finalization</fullName>
            </value>
            <value>
                <fullName>Loan sanction awaited</fullName>
            </value>
            <value>
                <fullName>Client non-contactable</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>No Pending Reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>