force-app/main/default/objects/Blocking_Unit_Information__c/fields/Project_Unit__c.field-meta.xml
<CustomField>
    <fullName>Project_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Unit</label>
    <referenceTo>Project_Unit__c</referenceTo>
    <relationshipLabel>Blocking Unit Information</relationshipLabel>
    <relationshipName>Blocking_Unit_Information</relationshipName>
    <type>Lookup</type>
</CustomField>