force-app/main/default/objects/Blocking_Unit_Information__c/fields/Quoted_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Agreement_Value__c</fullName>
    <label>Quoted Agreement Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>