force-app/main/default/objects/Blocking_Unit_Information__c/fields/Transaction_Details_3__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Details_3__c</fullName>
    <label>Transaction Details 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>