force-app/main/default/objects/Blocking_Unit_Information__c/fields/Update_Blocked_Status__c.field-meta.xml
<CustomField>
    <fullName>Update_Blocked_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Blocked Status</label>
    <type>Checkbox</type>
</CustomField>